force-app/main/default/objects/Production_Work_Order__c/Production_Work_Order__c.object-meta.xml
<CustomObject>
    <label>Production Work Order</label>
    <nameField>
        <displayFormat>PWO-{YYYY}-{MM}-{DD}-{00000}</displayFormat>
        <label>Production Work Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>