force-app/main/default/objects/Production_Work_Order__c/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <inlineHelpText>Calculated; Updated from Production Batch Job based on Actual Completion Date</inlineHelpText>
    <label>Actual Completion Date</label>
    <summarizedField>Production_Batch_Jobs__c.Actual_Completion_Date__c</summarizedField>
    <summaryForeignKey>Production_Batch_Jobs__c.Production_Work_Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>