force-app/main/default/objects/Production_Work_Order__c/fields/Actual_Packaging_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Packaging_Start_Date__c</fullName>
    <inlineHelpText>Calculated; Updated from Production Batch Job based on Actual State Date</inlineHelpText>
    <label>Actual Start Date</label>
    <summarizedField>Production_Batch_Jobs__c.Actual_Start_Date__c</summarizedField>
    <summaryForeignKey>Production_Batch_Jobs__c.Production_Work_Order__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>