force-app/main/default/objects/Production_Work_Order__c/fields/Avg_Cycle_Time_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Avg_Cycle_Time_per_Unit__c</fullName>
    <formula>IF(Completed_Qty__c = 0,0,Total_Production_Time__c * 60 / Completed_Qty__c)</formula>
    <inlineHelpText>Calculated; Expressed in seconds. Average cycle time per unit</inlineHelpText>
    <label>Time per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>