force-app/main/default/objects/Production_Work_Order__c/fields/Balance_Qty__c.field-meta.xml
<CustomField>
    <fullName>Balance_Qty__c</fullName>
    <formula>IF(Hard_Close_PWO__c = True, 0, Targeted_Converted_Qty__c -  Completed_Qty__c)</formula>
    <label>Balance Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>