force-app/main/default/objects/Production_Work_Order__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <formula>Service_Ticket_Line__r.Harvest_Batch_ID__c</formula>
    <label>Del_Batch ID</label>
    <type>Text</type>
</CustomField>