force-app/main/default/objects/Production_Work_Order__c/fields/Batch_ID_New__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Batch ID</label>
    <referenceTo>Harvest_Batch_Code__c</referenceTo>
    <relationshipLabel>Production Work Orders</relationshipLabel>
    <relationshipName>Production_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>