force-app/main/default/objects/Production_Work_Order__c/fields/Brand_Packaging_Notes__c.field-meta.xml
<CustomField>
    <fullName>Brand_Packaging_Notes__c</fullName>
    <label>Brand Packaging Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>