force-app/main/default/objects/Production_Work_Order__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quote</label>
    <referenceTo>Brand_Quote__c</referenceTo>
    <relationshipLabel>Production Work Orders</relationshipLabel>
    <relationshipName>Production_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>