force-app/main/default/objects/Production_Work_Order__c/fields/Brand_Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote_Price__c</fullName>
    <formula>Brand_Quote__r.Total_Quoted_Price__c</formula>
    <label>Brand Quote Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>