force-app/main/default/objects/Production_Work_Order__c/fields/Brand_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote_Status__c</fullName>
    <formula>TEXT(Brand_Quote__r.BQ_Status__c )</formula>
    <label>Brand Quote Status</label>
    <type>Text</type>
</CustomField>