force-app/main/default/objects/Production_Work_Order__c/fields/Byproduct_Weight__c.field-meta.xml
<CustomField>
    <fullName>Byproduct_Weight__c</fullName>
    <inlineHelpText>Calculated; Summary from Production Batch Job. Expressed in the UOM of New Packaged Product</inlineHelpText>
    <label>Byproduct Weight</label>
    <summarizedField>Production_Batch_Jobs__c.Byproduct_Weight__c</summarizedField>
    <summaryForeignKey>Production_Batch_Jobs__c.Production_Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>