force-app/main/default/objects/Production_Work_Order__c/fields/Completed_Qty__c.field-meta.xml
<CustomField>
    <fullName>Completed_Qty__c</fullName>
    <label>Completed Qty</label>
    <summarizedField>Production_Batch_Jobs__c.Actual_Converted_Qty__c</summarizedField>
    <summaryForeignKey>Production_Batch_Jobs__c.Production_Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>