force-app/main/default/objects/Production_Work_Order__c/fields/Cone_Size__c.field-meta.xml
<CustomField>
    <fullName>Cone_Size__c</fullName>
    <inlineHelpText>Empty preroll cone size</inlineHelpText>
    <label>Cone Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cone_Size</valueSetName>
    </valueSet>
</CustomField>