force-app/main/default/objects/Production_Work_Order__c/fields/Consumed_Weight_or_Qty__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Weight_or_Qty__c</fullName>
    <inlineHelpText>Calculated; Summary from Production Batch Job. Expressed in the UOM of New Packaged Product</inlineHelpText>
    <label>Consumed Weight</label>
    <summarizedField>Production_Batch_Jobs__c.Consumed_Weight_or_Qty__c</summarizedField>
    <summaryForeignKey>Production_Batch_Jobs__c.Production_Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>