force-app/main/default/objects/Production_Work_Order__c/fields/Count_of_Batch_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Batch_Jobs__c</fullName>
    <label>Count of Batch Jobs</label>
    <summaryForeignKey>Production_Batch_Jobs__c.Production_Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>