force-app/main/default/objects/Production_Work_Order__c/fields/Desired_Net_Weight_or_Qty__c.field-meta.xml
<CustomField>
    <fullName>Desired_Net_Weight_or_Qty__c</fullName>
    <label>Desired Net Weight or Qty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Desired_Net_Weight_or_Qty</valueSetName>
    </valueSet>
</CustomField>