force-app/main/default/objects/Production_Work_Order__c/fields/Display_Cannabis_Waste__c.field-meta.xml
<CustomField>
    <fullName>Display_Cannabis_Waste__c</fullName>
    <formula>IF( Is_Cannabis_Waste__c = True, &quot;Cannabis Waste - Move to CannaWaste Hold&quot;, &quot;Excess Product - Return to Stock After Inspection&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Cannabis Waste</label>
    <type>Text</type>
</CustomField>