force-app/main/default/objects/Production_Work_Order__c/fields/Earliest_Packaging_Date2__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Packaging_Date2__c</fullName>
    <inlineHelpText>NOTE: Based on PWO date and US Holidays. Standard Lead-Time 7 Calendar Days</inlineHelpText>
    <label>Earliest Packaging Date</label>
    <type>Date</type>
</CustomField>