force-app/main/default/objects/Production_Work_Order__c/fields/Excess_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Excess_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>End of project excess product. Packaging to enter excess product name.</inlineHelpText>
    <label>Excess Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Production Work Orders (Cannabis Waste Product)</relationshipLabel>
    <relationshipName>Production_Work_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>