force-app/main/default/objects/Production_Work_Order__c/fields/Excess_Product_UOM__c.field-meta.xml
<CustomField>
    <fullName>Excess_Product_UOM__c</fullName>
    <formula>TEXT( Excess_Product_Name__r.Stocking_UOM__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess Product UOM</label>
    <type>Text</type>
</CustomField>