force-app/main/default/objects/Production_Work_Order__c/fields/FG_New_Packaged_Product__c.field-meta.xml
<CustomField>
    <fullName>FG_New_Packaged_Product__c</fullName>
    <formula>New_Packaged_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FG New Packaged Product</label>
    <type>Text</type>
</CustomField>