force-app/main/default/objects/Production_Work_Order__c/fields/FG_Product_Packaged_From__c.field-meta.xml
<CustomField>
    <fullName>FG_Product_Packaged_From__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FG Product Packaged From</label>
    <type>Text</type>
</CustomField>