force-app/main/default/objects/Production_Work_Order__c/fields/Hard_Close_PWO__c.field-meta.xml
<CustomField>
    <fullName>Hard_Close_PWO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manual Entry; Check if closing PWO short of Balance Qty</inlineHelpText>
    <label>Hard Close PWO</label>
    <type>Checkbox</type>
</CustomField>