force-app/main/default/objects/Production_Work_Order__c/fields/Intake_Weight__c.field-meta.xml
<CustomField>
    <fullName>Intake_Weight__c</fullName>
    <inlineHelpText>Manual entry; Use Required Weight UOM to determine entry</inlineHelpText>
    <label>Intake Weight</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>