force-app/main/default/objects/Production_Work_Order__c/fields/Is_Cannabis_Waste__c.field-meta.xml
<CustomField>
    <fullName>Is_Cannabis_Waste__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check is excess product is cannabis waste</inlineHelpText>
    <label>Is Cannabis Waste</label>
    <type>Checkbox</type>
</CustomField>