force-app/main/default/objects/Production_Work_Order__c/fields/Jar_Bag_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Jar_Bag_Arrival_Date__c</fullName>
    <label>Jar | Bag Arrival Date</label>
    <type>Date</type>
</CustomField>