force-app/main/default/objects/Production_Work_Order__c/fields/Label_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Label_Arrival_Date__c</fullName>
    <label>Label Arrival Date</label>
    <type>Date</type>
</CustomField>