force-app/main/default/objects/Production_Work_Order__c/fields/Lineage__c.field-meta.xml
<CustomField>
    <fullName>Lineage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lineage</label>
    <referenceTo>Lineage__c</referenceTo>
    <relationshipLabel>Production Work Orders</relationshipLabel>
    <relationshipName>Production_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>