force-app/main/default/objects/Production_Work_Order__c/fields/Materials_Shortage__c.field-meta.xml
<CustomField>
    <fullName>Materials_Shortage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Materials Shortage</label>
    <type>Checkbox</type>
</CustomField>