force-app/main/default/objects/Production_Work_Order__c/fields/New_Packaged_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Packaged_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of new product packaged to. This should be the final form product name.</inlineHelpText>
    <label>New Packaged Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Production Work Orders New Packaged Product</relationshipLabel>
    <relationshipName>Production_Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>