force-app/main/default/objects/Production_Work_Order__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Production Work Orders</relationshipLabel>
    <relationshipName>Production_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>