force-app/main/default/objects/Production_Work_Order__c/fields/Pick_Complete__c.field-meta.xml
<CustomField>
    <fullName>Pick_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when pick is completed.</inlineHelpText>
    <label>Pick Complete</label>
    <type>Checkbox</type>
</CustomField>