force-app/main/default/objects/Production_Work_Order__c/fields/Pick_up_or_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_or_Arrival_Date__c</fullName>
    <label>Pick-up or Arrival Date</label>
    <type>Date</type>
</CustomField>