force-app/main/default/objects/Production_Work_Order__c/fields/Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date__c</fullName>
    <inlineHelpText>Production Planned Start Date Manually Input by Production, Date in which anticipated all required materials are available before Release Date to package</inlineHelpText>
    <label>Planned Date</label>
    <type>Date</type>
</CustomField>