force-app/main/default/objects/Production_Work_Order__c/fields/Prerolls_per_Pack__c.field-meta.xml
<CustomField>
    <fullName>Prerolls_per_Pack__c</fullName>
    <label>Prerolls per Pack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prerolls_per_Pack</valueSetName>
    </valueSet>
</CustomField>