force-app/main/default/objects/Production_Work_Order__c/fields/Price_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Unit__c</fullName>
    <formula>Brand_Quote_Price__c / Targeted_Converted_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>