force-app/main/default/objects/Production_Work_Order__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>S4</fullName>
            </value>
            <value>
                <fullName>S5</fullName>
            </value>
            <value>
                <fullName>S6</fullName>
            </value>
            <value>
                <fullName>S7</fullName>
            </value>
            <value>
                <fullName>S8</fullName>
            </value>
            <value>
                <fullName>S9</fullName>
            </value>
            <value>
                <fullName>S10</fullName>
            </value>
            <value>
                <fullName>S11</fullName>
            </value>
            <value>
                <fullName>S12</fullName>
            </value>
            <value>
                <fullName>S13</fullName>
            </value>
            <value>
                <fullName>S14</fullName>
            </value>
            <value>
                <fullName>S15</fullName>
            </value>
            <value>
                <fullName>S16</fullName>
            </value>
            <value>
                <fullName>S17</fullName>
            </value>
            <value>
                <fullName>S18</fullName>
            </value>
            <value>
                <fullName>S19</fullName>
            </value>
            <value>
                <fullName>S20</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
            <value>
                <fullName>E4</fullName>
            </value>
            <value>
                <fullName>E5</fullName>
            </value>
            <value>
                <fullName>E6</fullName>
            </value>
            <value>
                <fullName>E7</fullName>
            </value>
            <value>
                <fullName>E8</fullName>
            </value>
            <value>
                <fullName>E9</fullName>
            </value>
            <value>
                <fullName>E10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>