force-app/main/default/objects/Production_Work_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Packaged From</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Production Work Orders</relationshipLabel>
    <relationshipName>Production_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>