force-app/main/default/objects/Production_Work_Order__c/fields/Production_Description__c.field-meta.xml
<CustomField>
    <fullName>Production_Description__c</fullName>
    <formula>New_Packaged_Product__r.Description</formula>
    <label>Production Description</label>
    <type>Text</type>
</CustomField>