force-app/main/default/objects/Production_Work_Order__c/fields/PWO_Packaging_Instructions__c.field-meta.xml
<CustomField>
    <fullName>PWO_Packaging_Instructions__c</fullName>
    <inlineHelpText>Manual Entry; Account Support Rep to enter additional packaging instructions, if required</inlineHelpText>
    <label>PWO Packaging Instructions</label>
    <type>TextArea</type>
</CustomField>