force-app/main/default/objects/Production_Work_Order__c/fields/QA_Compliance_Sign_off_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Compliance_Sign_off_Date__c</fullName>
    <label>QA Compliance Sign-off Date</label>
    <type>Date</type>
</CustomField>