force-app/main/default/objects/Production_Work_Order__c/fields/Qty_Label_Small__c.field-meta.xml
<CustomField>
    <fullName>Qty_Label_Small__c</fullName>
    <label>Qty Label | Small</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>