force-app/main/default/objects/Production_Work_Order__c/fields/Released_Date__c.field-meta.xml
<CustomField>
    <fullName>Released_Date__c</fullName>
    <inlineHelpText>Date in which packaging is clear to package</inlineHelpText>
    <label>Released Date</label>
    <type>Date</type>
</CustomField>