force-app/main/default/objects/Production_Work_Order__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <formula>Service_Ticket_Line__r.Requested_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Brand input based on Requested Completion Date</inlineHelpText>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>