force-app/main/default/objects/Production_Work_Order__c/fields/Requested_Pick_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Pick_Date__c</fullName>
    <inlineHelpText>Date in which cannabis goods should be picked for production. Desired time should 2 days prior to Production Release Date.</inlineHelpText>
    <label>Requested Pick Date</label>
    <type>Date</type>
</CustomField>