force-app/main/default/objects/Production_Work_Order__c/fields/RLB_Location__c.field-meta.xml
<CustomField>
    <fullName>RLB_Location__c</fullName>
    <inlineHelpText>Temp location cannabis goods were picked from R-L-B</inlineHelpText>
    <label>RLB Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>