force-app/main/default/objects/Production_Work_Order__c/fields/Scope_Established_Date__c.field-meta.xml
<CustomField>
    <fullName>Scope_Established_Date__c</fullName>
    <label>Scope Established Date</label>
    <type>Date</type>
</CustomField>