force-app/main/default/objects/Production_Work_Order__c/fields/Service_Ticket_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Ticket_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Ticket Line</label>
    <referenceTo>Service_Ticket_Line__c</referenceTo>
    <relationshipLabel>Production Work Orders</relationshipLabel>
    <relationshipName>Production_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>