force-app/main/default/objects/Production_Work_Order__c/fields/Strain__c.field-meta.xml
<CustomField>
    <fullName>Strain__c</fullName>
    <formula>New_Packaged_Product__r.Strain__r.Name</formula>
    <label>Strain</label>
    <type>Text</type>
</CustomField>