force-app/main/default/objects/Production_Work_Order__c/fields/Subtotal_Label_Qty__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Label_Qty__c</fullName>
    <formula>(Qty_Label_Small__c + Qty_Label_Medium__c + Qty_Label_Large__c + Qty_Label_Misc__c)</formula>
    <label>Subtotal Label Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>