force-app/main/default/objects/Production_Work_Order__c/fields/Tamper_Type__c.field-meta.xml
<CustomField>
    <fullName>Tamper_Type__c</fullName>
    <label>Tamper Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tamper_Type</valueSetName>
    </valueSet>
</CustomField>