force-app/main/default/objects/Production_Work_Order__c/fields/Targeted_Converted_Qty__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Converted_Qty__c</fullName>
    <formula>IF(ISPICKVAL( Service_Type__c,&apos;Casing&apos;), Service_Ticket_Line__r.Total_Units__c  /  Units_per_Case__c ,  Service_Ticket_Line__r.Converted_Single_Qty__c )</formula>
    <label>Target Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>