force-app/main/default/objects/Production_Work_Order__c/fields/Total_Cannabis_Weight_or_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Cannabis_Weight_or_Qty__c</fullName>
    <formula>Service_Ticket_Line__r.Total_Cannabis_Weight_g__c</formula>
    <inlineHelpText>Calculated; Expressed in numeric Required Weight UOM</inlineHelpText>
    <label>Required Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>