force-app/main/default/objects/Production_Work_Order__c/fields/Total_Cannabis_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>Total_Cannabis_Weight_UOM__c</fullName>
    <formula>TEXT(New_Packaged_Product__r.Cannabis_Weight_UOM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expressed in the UOM of New Packaged Product</inlineHelpText>
    <label>Required Weight UOM</label>
    <type>Text</type>
</CustomField>