force-app/main/default/objects/Production_Work_Order__c/fields/Total_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases__c</fullName>
    <formula>IF( Units_per_Case__c =0,0,IF( 
ISPICKVAL(Service_Type__c, &apos;Pre-Rolling&apos;)||
ISPICKVAL(Service_Type__c,&apos;Pre-Roll Packing&apos;),Total_Preroll_Packs__c / Units_per_Case__c, Targeted_Converted_Qty__c / Units_per_Case__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>