force-app/main/default/objects/Production_Work_Order__c/fields/Total_Preroll_Packs__c.field-meta.xml
<CustomField>
    <fullName>Total_Preroll_Packs__c</fullName>
    <formula>IF(ISBLANK(TEXT(Prerolls_per_Pack__c)),0,Targeted_Converted_Qty__c /


CASE(Prerolls_per_Pack__c ,
&apos;Prerolls Pack 1&apos;, 1, 
&apos;Prerolls Pack 2&apos;, 2, 
&apos;Prerolls Pack 3&apos;, 3, 
&apos;Prerolls Pack 4&apos;, 4, 
&apos;Prerolls Pack 5&apos;, 5, 
&apos;Prerolls Pack 6&apos;, 6, 
&apos;Prerolls Pack 7&apos;, 7, 
&apos;Prerolls Pack 8&apos;, 8, 
&apos;Prerolls Pack 9&apos;, 9, 
&apos;Prerolls Pack 10&apos;, 10, 1))</formula>
    <label>Total Preroll Packs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>