force-app/main/default/objects/Production_Work_Order__c/fields/Total_Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Production_Time__c</fullName>
    <inlineHelpText>Calculated; Summary from Production Batch Job. Expressed in minutes</inlineHelpText>
    <label>Total Production Time</label>
    <summarizedField>Production_Batch_Jobs__c.Total_Production_Time__c</summarizedField>
    <summaryForeignKey>Production_Batch_Jobs__c.Production_Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>