force-app/main/default/objects/Production_Work_Order__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <formula>Service_Ticket_Line__r.Total_Units__c</formula>
    <inlineHelpText>Total Units from Service Ticket Line</inlineHelpText>
    <label>Total Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>