force-app/main/default/objects/Production_Work_Order__c/fields/Total_Units_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_New__c</fullName>
    <label>Total Units_New</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>