force-app/main/default/objects/Production_Work_Order__c/fields/Transfer_Method__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Method__c</fullName>
    <formula>TEXT(Service_Ticket_Line__r.Service_Ticket__r.Transfer_Method__c)</formula>
    <label>Transfer Method</label>
    <type>Text</type>
</CustomField>