force-app/main/default/objects/Production_Work_Order__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <formula>Service_Ticket_Line__r.UID__c</formula>
    <label>Del_UID</label>
    <type>Text</type>
</CustomField>