force-app/main/default/objects/Production_Work_Order__c/fields/UID_New__c.field-meta.xml
<CustomField>
    <fullName>UID_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source UID</label>
    <referenceTo>UID__c</referenceTo>
    <relationshipLabel>Production Work Orders</relationshipLabel>
    <relationshipName>Production_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>