force-app/main/default/objects/Production_Work_Order__c/fields/Units_per_Case__c.field-meta.xml
<CustomField>
    <fullName>Units_per_Case__c</fullName>
    <label>Units per Case</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>