force-app/main/default/objects/Production_Work_Order__c/fields/Weight_Variance__c.field-meta.xml
<CustomField>
    <fullName>Weight_Variance__c</fullName>
    <formula>IF(OR(
ISPICKVAL(Service_Type__c ,&apos;Casing&apos;),
ISPICKVAL(Service_Type__c,&apos;Sample Conversion&apos;),
ISPICKVAL(Service_Type__c,&apos;Labeling&apos;)),
0,
Intake_Weight__c - ( Consumed_Weight_or_Qty__c +  Byproduct_Weight__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated; Intake Weight minus by Consumed Weight and Byproduct Weight. Expressed in Required Weight UOM</inlineHelpText>
    <label>Weight Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>