force-app/main/default/objects/Production_Work_Order__c/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <formula>IF(OR(
ISPICKVAL(Service_Type__c ,&apos;Casing&apos;),
ISPICKVAL(Service_Type__c,&apos;Sample Conversion&apos;),
ISPICKVAL(Service_Type__c,&apos;Labeling&apos;)),
 Completed_Qty__c /  Targeted_Converted_Qty__c ,
(Consumed_Weight_or_Qty__c) /  Intake_Weight__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated; Intake Weight divided by Consumed Weight. If error, validate fields for missing input to Batch Job</inlineHelpText>
    <label>Yield (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>