force-app/main/default/objects/Production_Work_Order__c/recordTypes/Packaging.recordType-meta.xml
<RecordType>
    <fullName>Packaging</fullName>
    <active>true</active>
    <label>Packaging</label>
</RecordType>